# research---system

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
config/: mcporter.json  zones.json
output/: e2e-report.json  multi-topic-report.json  stress-report.json  system_research_run.json  system_research_run_structured_outputs.json  system_validation_report_20260323.md  telegram_live_automation.json  telegram_session_log.jsonl  telemetry.jsonl  test-results.txt  test_summary.txt
scripts/: auto-research.py  benchmark_llamacpp.py  benchmark_models.py  bootstrap-wsl.sh  build_llamacpp.ps1  fetch-private-gh.sh  fetch-public.sh  lib-host-endpoints.sh  lint.sh  live_telegram_automation.py  live_telegram_session.py  live_telegram_test.py  llamacpp_preflight.py  multi_topic_research.py  pi_runtime.py  preflight-deep.ps1  preflight.ps1  run_live_telegram_test.ps1  start-stack.sh  start-telegram-bot.ps1  start_llamacpp_server.ps1  start_vllm.py  stop-stack.sh  stress_test.py  synthesize-note.sh  telegram_bot.py  validate-repo.ps1  verify_e2e.py  vllm_preflight.py  windows-http-bridge.py  workspace_utils.py
tests/: conftest.py  test_circuit_breaker.py  test_config_schema.py  test_conversation_store.py  test_discovery.py  test_evaluation.py  test_event_handlers.py  test_event_name_regression.py  test_events.py  test_evoskill.py  test_exceptions.py  test_fetcher.py  test_gap_detector.py  test_llamacpp_provider.py  test_llm_breaker_guard.py  test_logging_config.py  test_obsidian.py  test_orchestrator.py  test_provider_matrix.py  test_quality_gate.py  test_reflection.py  test_registry.py  test_report_service.py  test_research_failure_paths.py  test_resource_guard.py  test_runtime.py  test_runtime_upgrades.py  test_search.py  test_session_preferences.py  test_skill_memory.py  (+8 more)
(+134 files in other folders)
